--- a/_posts/2022-03-28-ce-shi.md
+++ b/_posts/2022-03-28-ce-shi.md
@@ -1,5 +1,5 @@
 ---
-title: 测试
+title: 静态博客？还是变态博客！
 permalink: 
 cover: 
 updated: 2022-03-29 14:16:17
@@ -9,5 +9,5 @@ tags: 测试
 ---
 #### 测试静态博客,说真的有什么逼格之类的我真没看出来。。。再玩玩没意思就撤了.
 #### 折腾了几天的静态博客，莫名其妙的就不能更新了。也没搞明白模板怎么整，只能忍受原始的模板，work来的模板也没用上，体验极差，也没体现出静态网站的优势，感觉自己纯属找不自在。。。
-#### 本来在数据库博客发誓了再折腾静态博客我就是沙雕，奈何一个劲的给我发邮件，催我发博客，好吧，食盐一次，再试试看看成不成。弃用是肯定的了，有这时间我在普通博客能写好上万字了。就像我一直吐槽公司的垃圾OA，这软件是为工作提供便利，不是让这憨批软件来折腾兄弟们玩的，一切如是！！
+#### 本来在数据库博客发誓了再折腾静态博客我就是沙雕，奈何一个劲的给我发邮件，催我发博客，好吧，食盐一次，再试试看看成不成。弃用是肯定的了，有这时间我在普通博客能写上万字了。就像我一直吐槽公司的垃圾OA，这软件是为工作提供便利，不是让这憨批软件来折腾兄弟们玩的，一切如是！！
 #### 原来是一天编辑10次的设定导致的这些错误，原谅我这有时候灵感如尿崩的人兴趣来了一天写好几个日志，原来这竟然是一种错误，难怪编辑器提醒我发布要谨慎，受教了。
